--- a/web/app/themes/xrnl/assets/sass/custom.scss
+++ b/web/app/themes/xrnl/assets/sass/custom.scss
@@ -66,7 +66,7 @@ img.featured-xr-logo {
 
   // Search form
 
-  .searchform {
+  .search-form {
     @extend .mb-4;
     input[type=text] {
       @extend .form-control;
