--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import '~bootstrap/scss/bootstrap';
 @import "typography";
+@import "buttons";
 @import "header";
 @import "footer";
 @import "list";
