--- a/web/app/themes/xrnl/assets/sass/custom.scss
+++ b/web/app/themes/xrnl/assets/sass/custom.scss
@@ -123,7 +123,7 @@ nav.post-navigation {
       @extend .border-bottom;
     }
     .nav-next {
-      @extend .pt-4;
+      @extend .py-4;
     }
     span {
       color: #999;
