update styling and spacing

--- a/web/app/themes/xrnl/assets/sass/_variables.scss
+++ b/web/app/themes/xrnl/assets/sass/_variables.scss
@@ -23,6 +23,6 @@ $btn-focus-width:               0 !default;
 $btn-border-width:              0 !default;
 $btn-border-radius-lg:          0 !default;
 
-$link-decoration:               underline !default;
+$link-decoration:               none !default;
 $brand-font:                    'FucXed', Montserrat, sans-serif !default;
 $brand-font-secondary:          'Crimson Text', serif;
