--- a/web/app/themes/xrnl/assets/sass/press.scss
+++ b/web/app/themes/xrnl/assets/sass/press.scss
@@ -1,34 +1,19 @@
-.display-posts-listing {
-  .listing-item {
-    .image {
-      display: block;
-      float: right;
-      height: 150px;
-      width: 150px;
-      text-align: center;
-    }
-    display: block;
-    padding: 1rem 0;
-    overflow: auto;
-    &::after {
-      clear: both;
-    }
-  }
-}
 
 .display-posts-listing {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-.display-posts-listing .title {
-	display: block;
-	font-family: $brand-font;
-	text-transform: uppercase;
-	font-size: 14pt;
-	color: #555;
-}
-.display-posts-listing .date {
-	display: block;
-	color: #aaa;
+  @extend .list-unstyled;
+  &> li {
+    @extend .py-4;
+    @extend .border-bottom;
+    &:last-child {
+      border-bottom: 0 !important;
+    }
+    &> a {
+      font-family: $brand-font;
+      text-transform: uppercase;
+    }
+    .date {
+      display: block;
+      color: #aaa;
+    }
+  }
 }
