--- a/web/app/themes/xrnl/assets/sass/events.scss
+++ b/web/app/themes/xrnl/assets/sass/events.scss
@@ -4,7 +4,7 @@
 }
 
 .event_details {
-  background: map-get($theme-colors, 'orange') !important;
+  background: map-get($theme-colors, 'blue') !important;
 }
 
 .img_placeholder {
