make the mobile header a little small (#16)

--- a/web/app/themes/xrnl/assets/sass/header.scss
+++ b/web/app/themes/xrnl/assets/sass/header.scss
@@ -10,6 +10,13 @@
     }
   }
 
+
+  a.navbar-brand > img {
+    @include media-breakpoint-down(sm) {
+      height: 55px;
+    }
+  }
+
   .nav-item {
     margin: 0 0.5rem;
 
