revert variable changes in 7d482f6

--- a/web/app/themes/xrnl/assets/sass/_variables.scss
+++ b/web/app/themes/xrnl/assets/sass/_variables.scss
@@ -2,11 +2,11 @@
 $theme-colors: (
   "primary": #21a73d,
   "green": #21a73d,
-  "yellow": #F4F07A,
+  "yellow": #ffc113,
   "pink": #ed9bc4,
   "red": #dc4f00,
-  "orange": #FFC113,
-  "blue": #75D0F1,
+  "orange": #f19631,
+  "blue": #75d0f1,
   "black": #000,
   "white": #fff
 ) !default;
