rwb styling and updates (#17)
* rwb styling and updates

* add ability to add cover image (hero section) for home page

--- a/web/app/themes/xrnl/assets/sass/custom.scss
+++ b/web/app/themes/xrnl/assets/sass/custom.scss
@@ -8,13 +8,18 @@ img.featured-xr-logo {
 // Front page Jumbotron
 
 .masthead {
+  &.cover {
+    @extend .text-white;
+    background-size: cover !important;
+    min-height: 60vh;
+  }
+
 	margin: 0;
 	text-align: center;
 	background-color: #21a73d;
 	display: inherit !important;
   span { // first and third
     display: block;
-    color: #000;
     font-size: 4rem;
     line-height: 4rem;
 
