--- a/web/app/themes/xrnl/assets/sass/rwb.scss
+++ b/web/app/themes/xrnl/assets/sass/rwb.scss
@@ -19,4 +19,11 @@
     text-align: center !important;
     color: #000 !important;
   }
+
+  #can_embed_form form {
+    input, select {
+      // we use a pink bg, so make the box shadow dark pink
+      box-shadow: 0 0 0.2rem 0.2rem rgba(163, 33, 167, 0.25);
+    }
+  }
 }
