--- a/web/app/themes/xrnl/assets/sass/home.scss
+++ b/web/app/themes/xrnl/assets/sass/home.scss
@@ -3,5 +3,6 @@
   .cover-image {
     min-height: 75vh;
     background-size: cover !important;
+    background-position: 50% 90% !important;
   }
 }
