Minor design improvements (#39)
* proper alignment of background pictures

* mobile versions of images

* add logo to about page

--- a/web/app/themes/xrnl/assets/sass/custom.scss
+++ b/web/app/themes/xrnl/assets/sass/custom.scss
@@ -204,3 +204,26 @@ a:hover u {
     max-width: calc(100vw - 30px);
   }
 }
+
+.cover-image {
+  min-height: 45vh;
+  background-size: cover !important;
+}
+
+.image-desktop {
+  display: block;
+}
+
+.image-mobile {
+  display: none;
+}
+
+@media all and (max-width: 499px) {
+  .image-desktop {
+    display: none;
+  }
+
+  .image-mobile {
+    display: block;
+  }
+}
