--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -1,6 +1,6 @@
 // Bootstrap
 @import "variables";
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 @import "typography";
 @import "buttons";
 @import "header";
@@ -14,3 +14,4 @@
 @import "join";
 @import "about";
 @import "home";
+@import "roles";
