--- a/web/app/themes/xrnl/assets/sass/join.scss
+++ b/web/app/themes/xrnl/assets/sass/join.scss
@@ -2,7 +2,7 @@
 .join {
   font-size: 1.4rem;
   .join-cover-image {
-    min-height: 60vh;
+    // min-height: 60vh;
     background-size: cover !important;
   }
 
