added a 'no results' message when users apply filters and there are no results

--- a/web/app/themes/xrnl/assets/sass/typography.scss
+++ b/web/app/themes/xrnl/assets/sass/typography.scss
@@ -1,25 +1,27 @@
-
 body > header {
   position: relative;
 }
 
 body {
   background-color: $white;
-  font-family: 'Crimson Text', serif;
+  font-family: "Crimson Text", serif;
   font-size: 20px;
 }
 
-h1, h2 {
+h1,
+h2 {
   text-transform: uppercase;
   font-family: $brand-font;
 }
 
-ul, ol {
+ul,
+ol {
   padding-left: 3rem;
 }
 
 .font-xr {
   font-family: $brand-font;
+  text-transform: uppercase; // required for the XR font fuckxed-caps
 }
 
 main {
