Update Join page CSS

--- a/web/app/themes/xrnl/assets/sass/join.scss
+++ b/web/app/themes/xrnl/assets/sass/join.scss
@@ -6,6 +6,11 @@
     background-size: cover !important;
   }
 
+  .join-section {
+    text-align: center;
+    padding: 4rem 0.2rem;
+  }
+
   .join-location {
     font-size: 1.6rem;
   }
