--- a/web/app/themes/xrnl/assets/sass/join.scss
+++ b/web/app/themes/xrnl/assets/sass/join.scss
@@ -18,7 +18,6 @@
   #can_embed_form_inner > h2 {
     display: none;
   }
-
   #can_embed_form #can_thank_you {
     background-color: transparent !important;
     text-align: center !important;
@@ -32,6 +31,14 @@
         // we use a pink bg, so make the box shadow dark pink
         box-shadow: 0 0 0.2rem 0.2rem rgba(163, 33, 167, 0.25);
       }
+    }
+  }
+
+  .do-more-actions {
+    h3 {
+      text-transform: uppercase;
+      font-family: $brand-font;
+      margin-top: 2rem;
     }
   }
 }
