--- a/web/app/themes/xrnl/assets/sass/typography.scss
+++ b/web/app/themes/xrnl/assets/sass/typography.scss
@@ -24,6 +24,15 @@ ol {
   text-transform: uppercase; // required for the XR font fuckxed-caps
 }
 
+header, footer {
+  a {
+    text-decoration: none;
+  }
+}
+.btn {
+  text-decoration: none;
+}
+
 main {
   :not(.bg-navy) {
     a:not(.btn) {
