--- a/web/app/themes/xrnl/assets/sass/header.scss
+++ b/web/app/themes/xrnl/assets/sass/header.scss
@@ -30,6 +30,7 @@
       border-bottom: 5px solid $green;
       font-family: $brand-font;
       text-transform: uppercase;
+      white-space: nowrap;      
       font-size: 1.4rem;
       @include media-breakpoint-up(xl) {
         padding: 1.4rem 0.5rem;
