Update FucXed Caps

--- a/web/app/themes/xrnl/assets/fonts/fucxed.css
+++ b/web/app/themes/xrnl/assets/fonts/fucxed.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'FucXed';
-  src: url('fucxedcaps-webfont.woff2') format('woff2'), url('fucxedcaps-webfont.woff') format('woff'), url('fucxedcaps-webfont.otf') format('otf');
+  src: url('FUCXEDCAPSLatin-Regular.woff2') format('woff2'), url('FUCXEDCAPSLatin-Regular.woff') format('woff'), url('FUCXEDCAPSLatin-Regular.otf') format('otf');
   font-weight: normal;
   font-style: normal;
 }
