Petition page sections

--- a/web/app/themes/xrnl/assets/sass/petition.scss
+++ b/web/app/themes/xrnl/assets/sass/petition.scss
@@ -2,6 +2,10 @@
 .petition {
   font-size: 1.4rem;
 
+  section {
+    padding: 4rem 0.2rem;
+  }
+
   .petition-cover-image {
     min-height: 30vh;
     display: grid;
