Change donate button color

--- a/web/app/themes/xrnl/assets/sass/whydonate.scss
+++ b/web/app/themes/xrnl/assets/sass/whydonate.scss
@@ -11,6 +11,7 @@
     }
     .apreview-donate-btn-div {
       button {
+        background: $xr-black !important;
         margin: 0.4rem auto;
         font-family: $brand-font;
         font-size: 1.4rem;
@@ -71,6 +72,7 @@
     }
     .preview-user-donate-btn-div {
       button {
+        background: $xr-black !important;
         font-family: $brand-font;
         font-size: 1.4rem;
       }
