Increase width of blog post

--- a/web/app/themes/xrnl/assets/sass/custom.scss
+++ b/web/app/themes/xrnl/assets/sass/custom.scss
@@ -46,6 +46,12 @@ img.featured-xr-logo {
   }
 }
 
+// Blogs
+
+.blog-wrapper {
+  max-width: 1295px;
+}
+
 // Listing Excerpt (Search, Blog)
 
 .excerpt > p {
