--- a/web/app/themes/xrnl/assets/sass/why-rebel.scss
+++ b/web/app/themes/xrnl/assets/sass/why-rebel.scss
@@ -1,6 +1,5 @@
 $portrait-diameter: 175px;
 $portrait-diameter-md: 150px;
-$xr-light-gray: lighten($xr-black, 85%);
 
 .why-rebel {
   .hero {
@@ -18,6 +17,10 @@ $xr-light-gray: lighten($xr-black, 85%);
     h3 {
       font-family: $brand-font;
       font-size: 1.4rem;
+      margin-top: 3rem;
+    }
+    ul {
+      margin: 2rem 0;
     }
   }
   #demands {
@@ -25,6 +28,9 @@ $xr-light-gray: lighten($xr-black, 85%);
   }
   .demands-toggle {
     font-family: $brand-font;
+    cursor: pointer;
+    text-decoration: underline;
+
     &.reveal-demands {
       &::before {
         content: '\f067';
@@ -43,10 +49,17 @@ $xr-light-gray: lighten($xr-black, 85%);
         display: inline-block;
       }
     }
+    &:hover {
+      &::before {
+        color: $xr-primary;
+      }
+
+    }
   }
   #calls-to-action {
     margin: 2.5rem 0;
     .ctas {
+      display: -webkit-flex;
       display: flex;
       justify-content: flex-start;
       align-items: center;
@@ -54,20 +67,28 @@ $xr-light-gray: lighten($xr-black, 85%);
         color: $xr-black;
         &.btn {
           font-size: 1.5rem;
+          white-space: nowrap;
         }
         &.link {
           font-family: $brand-font;
           margin-left: 1rem;
           font-size: 1.2rem;
-        } 
+          &:hover {
+            color: $xr-primary;
+          }
+        }
       }
     }
   }
   .do-more-section {
     padding: 5rem 0;
   }
+  .do-more-description {
+    margin: 3rem 0 0 0;
+  }
   .do-more-actions {
     .ctas {
+      display: -webkit-flex;
       display: flex;
       align-items: flex-start;
       justify-content: flex-start;
@@ -77,8 +98,6 @@ $xr-light-gray: lighten($xr-black, 85%);
     }
   }
 }
-
-
 
 .quote-section {
   .quote-container {
@@ -93,7 +112,8 @@ $xr-light-gray: lighten($xr-black, 85%);
   }
 }
 
-.famous-quote {
+.quote-content {
+  display: -webkit-flex;
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
@@ -173,5 +193,4 @@ $xr-light-gray: lighten($xr-black, 85%);
       clip-path: circle($portrait-diameter-md/2 at center);
     }
   }
-
 }
