Added join us button and made header responsive for very small devices

--- a/web/app/themes/xrnl/assets/sass/header.scss
+++ b/web/app/themes/xrnl/assets/sass/header.scss
@@ -49,3 +49,15 @@
     display: none;
   }
 }
+
+@media only screen and (max-width: 405px) {
+  .navbar-expand-xl .hide-xxs  {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 406px) {
+  .navbar-expand-xl .show-xxs  {
+    display: none;
+  }
+}
