--- a/web/app/themes/xrnl/assets/sass/custom.scss
+++ b/web/app/themes/xrnl/assets/sass/custom.scss
@@ -250,3 +250,40 @@ a:hover u {
 .preserve-line-breaks {
 	white-space: pre-line;
 }
+
+a.btn-black-r {
+  @extend .btn-black;
+}
+
+@media only screen and (max-width: 376px) {
+  a.btn-black-r, a.btn-black-r:hover {
+    background-color: black;
+    color: white;
+    font-size: 0.875rem;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0px;
+  }
+}
+
+a.btn-black-r-invert {
+  background-color: transparent;
+  color: black;
+  border: 3px solid black;
+  padding: calc(0.375rem - 3px) calc(0.75rem - 6px);
+}
+a.btn-black-r-invert:hover {
+  color: white;
+/*  text-decoration: none;
+  display: inline-block;*/
+}
+
+@media only screen and (max-width: 376px) {
+  a.btn-black-r-invert,a.btn-black-r-invert:hover {
+    background-color: transparent;
+    color: black;
+    font-size: 0.875rem;
+    border: 3px solid black;
+    padding: calc(0.25rem - 3px) calc(0.5rem - 6px);
+    border-radius: 0px;
+  }
+}
