Add option to remove bottom border on quote

--- a/web/app/themes/xrnl/assets/sass/why-rebel.scss
+++ b/web/app/themes/xrnl/assets/sass/why-rebel.scss
@@ -95,6 +95,9 @@ $portrait-diameter-md: 150px;
       border-top: none;
       margin-top: 0;
     }
+    &.bottom {
+      border-bottom: none;
+    }
   }
 }
 
