--- a/web/app/themes/xrnl/assets/sass/petition.scss
+++ b/web/app/themes/xrnl/assets/sass/petition.scss
@@ -1,6 +1,9 @@
 .petition {
   font-size: 1.4rem;
 
+  div {
+    transition: visibility 0s, opacity 0.5s linear;
+  }
   section {
     padding: 4rem 0.2rem;
   }
@@ -9,8 +12,21 @@
     display: none;
   }
 
+  .isInvisible {
+    // necessary for it to occupy 0 space in the page
+    // display: none;
+    // necessary for transition
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  .isVisible {
+    visibility: visible;
+    opacity: 1;
+  }
+
   // default thank you message is hidden because we show a custom message
   #can_embed_form #can_thank_you {
-    display: none;
+    display: none !important;
   }
 }
