html for petition next steps and js to switch between steps

--- a/web/app/themes/xrnl/assets/sass/petition.scss
+++ b/web/app/themes/xrnl/assets/sass/petition.scss
@@ -14,7 +14,7 @@
 
   .isInvisible {
     // necessary for it to occupy 0 space in the page
-    // display: none;
+    display: none;
     // necessary for transition
     visibility: hidden;
     opacity: 0;
@@ -28,5 +28,12 @@
   // default thank you message is hidden because we show a custom message
   #can_embed_form #can_thank_you {
     display: none !important;
+  }
+
+  .button-block-centered {
+    display: block;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
