make default thank you message transparent.
The only rason it was green is because the website used to have a green
background for the form.

--- a/web/app/themes/xrnl/assets/sass/form.scss
+++ b/web/app/themes/xrnl/assets/sass/form.scss
@@ -151,7 +151,7 @@
   &> #can_thank_you {
     @extend .mt-4;
     @extend .mb-3;
-    background-color: $green !important;
+    background-color: transparent !important;
     padding: 0 !important;
     text-align: left !important;
 
