--- a/web/app/themes/xrnl/assets/sass/header.scss
+++ b/web/app/themes/xrnl/assets/sass/header.scss
@@ -30,7 +30,7 @@
     }
 
     .nav-link {
-      border-bottom: 5px solid $green;
+      border-bottom: 5px solid rgba(0, 0, 0, 0.0);
       font-family: $brand-font;
       white-space: nowrap;
       font-size: 1.4rem;
@@ -74,4 +74,18 @@
 .show-xxs {
   // quick hack to force that logo to the left
   margin: 0 -15px;
+}
+
+@each $color-key, $color-value in $theme-colors {
+  .bg-xr-#{$color-key} {
+    background: $color-value !important;
+  }
+  .nav-accent-xr-#{$color-key} {
+    .nav-item {
+      &:hover .nav-link,
+      &.active .nav-link {
+        color: $color-value !important;
+      }
+    }
+  }
 }
