Improve instructions for custom fields

--- a/web/app/themes/xrnl/assets/sass/local.scss
+++ b/web/app/themes/xrnl/assets/sass/local.scss
@@ -112,6 +112,7 @@ $logo-bg-bottom-shift: $logo-bottom-shift - ( ($logo-bg-diameter - $logo-diamete
     padding-top: 3rem;
     p {
       text-align: justify;
+      margin-bottom: 3rem;
     }
   }
 
