Update local groups CSS

--- a/web/app/themes/xrnl/assets/sass/local.scss
+++ b/web/app/themes/xrnl/assets/sass/local.scss
@@ -1,3 +1,149 @@
+// Local groups archive
+
+.local-groups-hero {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.85)), var(--bg-image);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 3rem 0;
+  color: $xr-white;
+}
+
+.local-groups-info {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  .info-toggle {
+    align-self: flex-end;
+    @include media-breakpoint-down(xs) {
+      align-self: center;
+    }
+    background: $xr-light-blue;
+    display: inline-block;
+    padding: .1rem 1rem .1rem .5rem;
+    cursor: pointer;
+    &::after {
+      font-family: 'FontAwesome';
+      content: '\f068';
+      margin-left: .5rem;
+      font-size: .9rem;
+      display: inline-block;
+    }
+    &.expanded {
+      &::after {
+        content: '\f067';
+      }
+    }
+  }
+
+  .info-expand {
+    align-self: flex-end;
+    background: lighten($xr-light-blue, 10%);
+    padding: 1rem 2rem;
+    max-width: 30rem;
+    text-align: center;
+    a {
+      text-decoration: none !important;
+    }
+  }
+
+}
+
+
+.local-groups-index {
+
+  .index-container {
+    display: flex;
+    justify-content: center;
+    padding: 1.5rem 1.5rem 8rem 1.5rem;
+  }
+
+    .select-region {
+      padding: 2.2rem 3.8rem 0 0;
+
+      display: flex;
+      flex-direction: column;
+
+      @include media-breakpoint-down(xs) {
+        display: none;
+      }
+
+      position: -webkit-sticky;
+      position: sticky;
+      top: 1rem;
+      align-self: flex-start;
+
+      button {
+        display: none; // will be revealed if javascript is enabled
+
+        background: none;
+        border: none;
+        border-bottom: 4px solid $xr-white;
+        font-family: $brand-font;
+        font-size: 1.4rem;
+        white-space: nowrap;
+        outline: none;
+
+        padding: 0;
+        margin: .5rem;
+        align-self: flex-end;
+        transition: border 200ms ease-in;
+
+        &::before {
+          font-family: 'FontAwesome';
+          content: '\f0a4';
+          color: $xr-white;
+          text-decoration: none;
+          display: inline-block;
+          position: absolute;
+          transform: translateX(-2rem);
+          transition: color 200ms ease-in;
+        }
+        &.active {
+          border-color: $xr-warm-yellow;
+          &::before {
+            color: $xr-warm-yellow;
+          }
+        }
+      }
+
+    }
+
+    .groups-list {
+      flex-grow: 2;
+      padding: 0;
+
+      ul {
+        padding: 0;
+        margin: 0;
+      }
+
+      .initial-letter {
+        font-size: 3rem;
+        color: $xr-green;
+        break-after: avoid-column;
+        border-bottom: 1px solid $xr-light-gray; //$xr-green;
+        margin-top: 0.5rem;
+      }
+
+      li {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+        font-weight: bold;
+        list-style: none;
+        padding-left: 0.5rem;
+        margin-left: .5rem;
+        a {
+          text-decoration: none;
+        }
+      }
+    }
+}
+
+
+// Single local group page
+
 $hero-min-height: 250px;
 $logo-diameter: 130px;
 $logo-bg-diameter: 150px;
