fix based on comments

--- a/web/app/themes/xrnl/assets/sass/citizen-assembly.scss
+++ b/web/app/themes/xrnl/assets/sass/citizen-assembly.scss
@@ -1,8 +1,4 @@
 .citizen-assembly {
-  li {
-    text-decoration: none !important;
-  }
-
   .tiles {
     a {
       text-decoration: none !important;
@@ -22,11 +18,15 @@
     background-color: #ffedb8;
   }
 
-  a#back-button{
+  a#back-button {
     text-decoration: none !important;
   }
 
-  #back-text{
+  #back-text {
     font-size: 1.8rem;
+  }
+
+  .header-title {
+    max-width: 80%;
   }
 }
